--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script
-      src="https://kit.fontawesome.com/e6ef16a460.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://integritytreeandlawn.com/e6ef16a460.js"></script>
     <title>Cameron Lucas - Home</title>
   </head>
   <body>
