--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="https://integritytreeandlawn.com/e6ef16a460.js"></script>
+    <script src="%PUBLIC_URL%/fontawesome.js"></script>
     <title>Cameron Lucas - Home</title>
   </head>
   <body>
